--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     ul li{ margin:4px 0; }
     footer{ border-top:1px solid var(--border); padding:18px 0; color:var(--muted); font-size:14px; }
     .hero{ display:grid; grid-template-columns:1.2fr .8fr; gap:var(--gap); align-items:center; }
-    .photo{ width:100%; max-width:320px; justify-self:end; border-radius:18px; box-shadow:var(--shadow); border:1px solid var(--border); background:#0a0d11; }
-    @media (max-width:800px){ .hero{ grid-template-columns:1fr; } .photo{ justify-self:start; max-width:220px; } }
+    .photo{ width:100%; max-width:240px; justify-self:end; border-radius:18px; box-shadow:var(--shadow); border:1px solid var(--border); background:#0a0d11; }
+    @media (max-width:800px){ .hero{ grid-template-columns:1fr; } .photo{ justify-self:start; max-width:180px; } }
     .company{ font-weight:600; }
   </style>
 </head>
@@ -71,7 +71,7 @@
           <a class="chip" href="https://github.com/ayushjhaveri" target="_blank" rel="noopener">GitHub</a>
           <a class="chip" href="https://scholar.google.com/citations?user=l1LOVTMAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
         </div>
-        <p style="max-width:62ch; line-height:1.6; color:var(--text);">I am a second‑year master’s student in Computer Science at NYU Courant Institute of Mathematical Sciences. My research interests lie in Natural Language Processing, and I will soon begin my thesis under the guidance of <a href="https://eunsol.github.io/" target="_blank" rel="noopener">Prof. Eunsol Choi</a>. Recently, I interned as an AI Engineer at <strong>BCG</strong>, and I previously worked as an SDE II at <strong>Amazon</strong>.</p>
+        <p style="max-width:62ch; line-height:1.6; color:var(--text);">I am a second-year master’s student in Computer Science at NYU Courant Institute of Mathematical Sciences. My research interests lie in Natural Language Processing, and I will soon begin my thesis under the guidance of <a href="https://eunsol.github.io/" target="_blank" rel="noopener">Prof. Eunsol Choi</a>. Recently, I interned as an AI Engineer at <strong>BCG</strong>, and I previously worked as an SDE II at <strong>Amazon</strong>.</p>
       </div>
       <img class="photo" src="Profile.png" alt="Ayush Jhaveri headshot" />
     </section>
@@ -93,7 +93,7 @@
         </div>
         <div class="card">
           <div class="row"><strong>Mosquito Species Detection</strong><div class="muted">2022</div></div>
-          <p>Ayush Jhaveri, K. S. Sangwan, Vinod Maan, Dhiraj. <em>Deep learning‑based mosquito species detection using wingbeat frequencies</em>. <span class="muted">Intelligent Data Engineering and Analytics, Springer Nature, pp. 71–80.</span> <a href="https://doi.org/10.1007/978-981-16-6624-7_8" target="_blank" rel="noopener">Publisher link</a></p>
+          <p>Ayush Jhaveri, K. S. Sangwan, Vinod Maan, Dhiraj. <em>Deep learning-based mosquito species detection using wingbeat frequencies</em>. <span class="muted">Intelligent Data Engineering and Analytics, Springer Nature, pp. 71–80.</span> <a href="https://doi.org/10.1007/978-981-16-6624-7_8" target="_blank" rel="noopener">Publisher link</a></p>
         </div>
       </div>
     </section>
@@ -119,15 +119,15 @@
         <div class="card">
           <div class="row"><div><span class="company">Boston Consulting Group</span> — Summer AI Engineer, New York</div><div class="muted">Jun 2025 – Aug 2025</div></div>
           <ul>
-            <li>Designed and built an agentic AI‑powered price recommendation system using LLMs for a major telecom client.</li>
+            <li>Designed and built an agentic AI-powered price recommendation system using LLMs for a major telecom client.</li>
           </ul>
         </div>
         <div class="card">
           <div class="row"><div><span class="company">Amazon</span> — Software Development Engineer II (Previously SDE I), Bangalore</div><div class="muted">Jul 2021 – May 2024</div></div>
           <ul>
-            <li>Led the design and development of a .NET‑based vision product identification app for Amazon physical stores.</li>
-            <li>Built AWS‑powered device provisioning automations.</li>
-            <li>Developed Vue.js‑based payment systems.</li>
+            <li>Led the design and development of a .NET-based vision product identification app for Amazon physical stores.</li>
+            <li>Built AWS-powered device provisioning automations.</li>
+            <li>Developed Vue.js-based payment systems.</li>
           </ul>
         </div>
       </div>
